[package]
name = "easyreceiptbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
